--- a/.env
+++ b/.env
@@ -42,5 +42,11 @@ CLIENT_SECRET='yyJXs4a2Sp5CxLmBPXiEFD1rDMdooSci'
 USER_NAME='certh_user'
 PASSWORD='c$rth2o24'
 
+# Local Keycloak
+KEYCLOAK_SERVER_URL='https://ceasefire-keycloak.euprojects.net'
+KEYCLAOK_CLIENT_ID='cyber-patrol-backend-2'
+KEYCLOAK_REALM_NAME='ceasefire-keycloak'
+KEYCLOAK_CLIENT_SECRET='0DfTgc7dhMr2hPExN8ASOlqMU3xdVflv'
+
 # Logs config
 LOG_CONFIG_PATH='logs/logging.conf'
